k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - flask-app
            topologyKey: "kubernetes.io/hostname"
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: flask-app
          image: jesusod/flask-app
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
