k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flask-db
spec:
  serviceName: flask-db
  replicas: 1
  selector:
    matchLabels:
      app: flask-db
  template:
    metadata:
      labels:
        app: flask-db
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - flask-db
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: flask-db
        image: mysql
        volumeMounts:
        - name: mysql-pvc
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
  volumeClaimTemplates:
  - metadata:
      name: mysql-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
