k8s/adminer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: adminer
  labels:
    app: adminer

spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer:latest
        imagePullPolicy: Always
        resources: 
            requests:                   
              memory: 10M
        ports:
        - name: adminer-http
          containerPort: 8080
    
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: default
spec:
  selector:
    app: adminer
  ports:
  - name: adminer-http
    port: 8080
    nodePort: 30008
    targetPort: adminer-http
  type: NodePort
