k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-db
spec:
  selector:
    app: flask-db
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
